2006-02-11 12:37 Mike Park  <mike.park@nasa.gov>

	* src/intersect.c (intersectTriangleSegment) exposed the ratio of
	intersection.

2006-02-10 13:21 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV,gridUntangleVolume) exclude
	elements with very small opposite sides, they will be addressed on
	the next pass.

2006-02-10 11:40 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleVolume) expect outward facing normals.

2006-02-10 10:35 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) to account for cad models
	that have CADGeom_ReversedSurfaceNormal, the uv of the face are
	not right handed.

2006-02-10  8:49 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotNodeOrbit) added to dump out cells
	surrounding a node.

2006-02-09 16:20 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauInit) got rid of big-M cost on auxillary,
	they are driven out explitly.

2006-02-09 15:45 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauAuxillaryPivot) created to force auxillary
	varibles out of the basis.
	* src/tableau.c (tableauSolve) .

2006-02-09 13:41 Mike Park  <mike.park@nasa.gov>

	* src/tableau.c (tableauLargestPivot) corrected bug in step_length,
	it should be  x / pivot.

2006-02-08 17:08 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleVolume) added to lp solve optimal
	node location by LP tableau.
	* src/tableau.c (tableauInit) fixed array indexing bug that
	read past end of array.
	* src/tableau.c (tableauInit) scaled M by n to make sure that
	the add columns (to create basic feasable solution) are removed.

2006-02-08 17:08 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridUntangleAreaUV) passes test for three tri case

2006-02-08 14:48 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridGaussianBackSolve) added to back solve upper
	diagonal matrices

2006-02-08 14:12 Mike Park  <mike.park@nasa.gov>

	* src/gridmath.c (gridGaussianElimination) added to transform